agrega url del proyecto

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                             <p class="card-text">Sexto trabajo realizado para Academía Desafío Latam. Consiste en realizar sitio web en Bootstrap y publicarlo en Github.</p>
                         </div>
                         <div class="card-footer py-3 text-center">
-                            <a href="https://github.com/aperezprado/proyecto_landing" target="_blank" class="btn btn-success">Ver Repositorio</a>
-                            <a href="https://aperezprado.github.io/proyecto_landing/" target="_blank" class="btn btn-success">Ver Proyecto</a>
+                            <a href="https://github.com/aperezprado/proyectofinal" target="_blank" class="btn btn-success">Ver Repositorio</a>
+                            <a href="https://aperezprado.github.io/proyectofinal/" target="_blank" class="btn btn-success">Ver Proyecto</a>
                         </div>
                     </div>
                 </div>
